package com.atm.exception;

public class TransactionException extends Exception {
    public TransactionException(String message) {
        super(message);
    }
}
