package com.atm.hardware;

public interface Keyboard {
    String getInput();
}
