package com.atm.service;

public interface DispenseStrategy {
    void dispense(double amount);
}
